--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
-body {
+#body {
     margin: auto;
     background-color: rgb(104, 187, 285)
 }
 
-header {
+#header {
     margin: 10px;
 }
 
-container {
+#container {
     margin: 10px;
 }
 
