--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 #left-box {
     float: left;
-    background-color: rgb(9,30,45); 
+    background-color: rgb(9, 30, 45); 
     color: white;
     width:300px;
     padding: 5px;
