--- a/style.css
+++ b/style.css
@@ -16,12 +16,11 @@ body {
     background-color: rgb(9, 30, 45); 
     color: white;
     width:300px;
-    padding: 10px;
 }
 
 #right-box {
     width:600px;
-    padding: 10px;
+    margin-left: 10px;
 
 }
 
